// 使用proto3语法，默认proto2
syntax = "proto3";

// 是否需要生成的类拆分为多个
option java_multiple_files = true;
// 生成的类所属的层级
option java_package = "rag.grpc.ragSearch";
option java_outer_classname = "RagSearchProto";
option objc_class_prefix = "RAG";

// 定义包名，避免命名冲突
package rag;

// 定义服务
service RagSearch {
  rpc ragSearch (ragSearchRequest) returns (ragSearchResponse) {}
}

// 结构化数据：使用message定义。
// 字段类型 字段名 = 字段编号;
message ragSearchRequest {
  string subject = 1;
  string options = 2;
}

message ragSearchResponse {
  repeated ContentModel contentItems = 1;
}

message ContentModel {
  string ragCode = 1;
  string ragMaterialCode = 2;
  string ragSegmentCode = 3;
  string content = 4;
  string resCode = 5;
  string resTitle = 6;
  string resOriginalUrl = 7;
}